# sembako_kita

./: .env.example  .gitignore  .sembako-builder.json  README.md  index.html  manifest.json  package.json  supabase.js  sw.js
.ai/: master-spec.md
.ai/agent-brain/: dependency-resolver.js
.ai/agent-braint/: file-generator.js  git-pusher.js  orchestrator.js  security-scanner.js  self-healer.js
.github/workflows/: ci-cd-engine.yml
assets/fonts/: README.md
assets/icons/: generate-icons.html  generate-screenshots.html  resize-icons.html
backend-hub/: package.json
backend-hub/src/: app.module.ts  stress-barometer.service.ts
backend-hub/src/ai/: qwen.service.ts
backend-hub/src/compression/: binary-packer.service.ts
backend-hub/src/ledger/: blockchain-validator.service.ts
backend-hub/src/logger/: blockchain-validator.service.ts
backend-hub/src/mesh/: gossip-protocol.service.ts
backend-hub/src/payments/: verification.service.ts
backend-hub/src/security/: zero-trust.guard.ts
backend-hub/src/token/: sembako-token.service.ts
css/: style-krisis.css  style-normal.css  style-survival.css  style.css
docs/: developer-guide.md  user-guide.md
infrastructure/: docker-compose.yml
infrastructure/init-scripts/: init-supabase-hybrid.sql
js/: app.js  offline.html
js/adapters/: device-health.js  mode-controller.js  module-manager.js  power-saver.js
js/agent/: action-executor.js  chat-responder.js  config.js  error-handler.js  health-check.js  local-brain.js  security-guard.js  self-optimizer.js  voice-engine.js
js/core/: app.js  components-ui.js  state-manager.js  supabase.js
js/modules/ai/: ai-assistant.js
js/modules/barter/: barter-controller.js
js/modules/defense/: security-controller.js
js/modules/inventory/: inventory-controller.js
js/modules/ledger/: ledger-controller.js
js/modules/mesh/: mesh-controller.js
js/operational/checklist/: checklist-controller.js  community-tips.js  daily-lesson.js  self-practice.js
js/operational/funding/: funding-controller.js  report-generator.js
js/operational/logistics/: logistics-controller.js  warung-darurat.js
js/operational/reports/: neighbor-solution.js  public-report.js  report-controller.js  sos-emergency.js
js/synchronization/: background-sync.js  conflict-resolver.js  sync-engine.js
js/utils/: compression.js  encryption.js  logger.js  validator.js
src-tauri/: Cargo.toml  build.rs  package.json  tauri.conf.json
src-tauri/android/: AndroidManifest.xml
src-tauri/android/res/values/: strings.xml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/integration/: supabase.test.js
tests/security/: backdoor-scanner.spec.js
tests/unit/: example.test.js
web-pwa/: package.json
